--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
-    line-height: 48px; /* 160% */
+    line-height: 48px;
     letter-spacing: -0.6px;
     margin-top: 37px;
     margin-left: 80px;
@@ -20,9 +20,11 @@
     letter-spacing: -0.6px;
 }
 
-section {
-    display: inline-block
+section img {
+    display:flex;
 }
+/*Cannot get sections side-by-side. 
+Could it be that the viewport is to small forcing the sections to be on top of each other?*/
 
 .main-title {
     color: #1B0A42;
@@ -30,7 +32,7 @@ section {
     font-size: 72px;
     font-style: normal;
     font-weight: 400;
-    line-height: 76px; /* 105.556% */
+    line-height: 76px;
     letter-spacing: 1.44px;
     margin-top: 203px;
     margin-left: 200px;
@@ -44,7 +46,7 @@ section {
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 32px; /* 160% */
+    line-height: 32px;
     letter-spacing: 0.4px;
     margin-top: 10px;
     margin-left: 200px;
@@ -59,11 +61,11 @@ section {
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    line-height: 32px; /* 200% */
+    line-height: 32px;
     letter-spacing: 0.32px;
     border-radius: 6px;
     background: #A3DC00;
-    margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: 200px;
     width: 152px;
     height: 64px;
